Fixed bug #76437 (token_get_all with TOKEN_PARSE flag fails to recognise close tag)